New features in taskopen 2.0.0 (beta)

  - Moved from perl to nim.
  - New command line interface.
  - New config file syntax.
  - Label-based actions. (#51)
  - Colored output.

Bugfixes and minor improvements in taskopen 1.1.5

  - Fix raw mode bug. (#132)
  - Add TASKOPENRC environment variable. (#116, #120)
  - Minor documentation improvements.

Bugfixes and minor improvements in taskopen 1.1.4

  - Suppress configuration override output from taskwarrior (#115)
  - Fix installation errors (#114)

Bugfixes and minor improvements in taskopen 1.1.3

  - Add default PREFIX. (#108)
  - Fix parallel make. (#106)
  - Fix regular expression matching. (#105)
  - Add script 'attach_vifm' that uses vifm for attaching files. (#104)
  - Add script 'xdg-open-cli'. (#102)

Bugfixes and minor improvements in taskopen 1.1.2

  - Allow xdg-open to handle all files. (#96)
  - Add environment variable $LAST_MATCH to provide access to the last submatch of a successful REGEX match. (#95)
  - Add helper script "addnote" that lets you select a file extension for your notes. (#95)
  - Fix file-type filtering, which was broken by introducing the -t/-T switches.

Bugfixes and minor improvements in taskopen 1.1.1

  - Fix warnings when TEXT_REGEX or NO_ANNOTATION_HOOK are undefined (#93)
  - Fix comment in default taskopenrc (#92)

New features in taskopen 1.1

  - Add FILE_CMD for better customisation (related to #92).
  - Implement TEXT_REGEX (#21) and command line switches -t/-T (#37).

Bugfixes and minor improvements in taskopen 1.1

  - Allow arbitrary numbers of CUSTOM commands (#91).
  - Fix quoting of command line arguments (#89).

Bugfixes in taskopen 1.0.2

  - Fix compatibility issue with taskwarrior 2.4.0

New features in taskopen 1.0.1

  - Allowing the following environment variables in customizable commands: $FILE, $UUID, $ID,
    $ANNOTATION and $LABEL.
  - Better cygwin support (thanks to Jostein).